[package]
name = "aivm"
version = "0.1.0"
edition = "2021"

license = "MIT OR Apache-2.0"
description = "Artificial intelligence that embraces the hardware it runs on."
homepage = "https://github.com/Pjottos/aivm"
documentation = "https://docs.rs/aivm"
repository = "https://github.com/Pjottos/aivm"

[dependencies]
cranelift = { version = "0.80", optional = true }
cranelift-jit = { version = "0.80", optional = true }
cranelift-module = { version = "0.80", optional = true }
cranelift-native = { version = "0.80", optional = true }

[dev-dependencies]
rand = "0.8"

[features]
jit-cranelift = ["cranelift", "cranelift-jit", "cranelift-module", "cranelift-native"]
