[package]
name = "aivm"
version = "0.2.0"
edition = "2021"

license = "MIT OR Apache-2.0"
description = "Artificial intelligence that embraces the hardware it runs on."
homepage = "https://github.com/Pjottos/aivm"
documentation = "https://docs.rs/aivm"
repository = "https://github.com/Pjottos/aivm"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[dependencies]
cranelift = { version = "0.80", optional = true }
cranelift-jit = { version = "0.80", optional = true }
cranelift-module = { version = "0.80", optional = true }
cranelift-native = { version = "0.80", optional = true }
bitvec = { version = "1", optional = true }
arrayvec = { version = "0.7", optional = true }
dynasmrt = { version = "1", optional = true }

[features]
default = ["jit"]
cranelift = ["dep:cranelift", "cranelift-jit", "cranelift-module", "cranelift-native"]
jit = ["bitvec", "arrayvec", "dynasmrt"]
